--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <h1>Nikos Delivos</h1>
         <div class="contact-links">
-            <a href="https://github.com/NikosDeliv" target="_blank"><i class="devicon-github-original"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><i class="devicon-linkedin-plain"></i> LinkedIn</a>
-            <a href="mailto:delivosnikos@gmail.com"><i class="devicon-google-plain"></i> Email</a>
+            <a href="https://github.com/NikosDeliv" target="_blank"><img src="https://deviconapi.vercel.app/github?version=original-wordmark&size=180" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/nikosdelivos" target="_blank"><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/linkedin/linkedin-plain.svg" alt="LinkedIn"></a>
+            <a href="mailto:delivosnikos@gmail.com"><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/google/google-plain.svg" alt="Google"></a>
         </div>
         <nav>
             <a href="#about">About Me</a>
@@ -25,7 +25,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I have a passion for game development and modding.</p>
+            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals...</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -38,21 +38,21 @@
                         <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank">Source Code</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-csharp-plain"></i>
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/csharp/csharp-plain.svg" alt="C#">
                     </div>
                 </div>
                 <div class="card">
-                    <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
-                    <h3>Bowtide</h3>
-                    <p>A Terraria mod that introduces new archery items such as bows and accessories to enhance the ranged bow experience in Terraria.</p>
-                    <div class="links">
-                        <a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Source Code</a>
-                        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
-                    </div>
-                    <div class="technologies">
-                        <i class="devicon-csharp-plain"></i>
-                        <span class="iconify" data-icon="logos:terraria"></span>
-                    </div>
+    <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
+    <h3>Bowtide</h3>
+    <p>A Terraria mod that introduces new archery items such as bows and accessories to enhance the ranged bow experience in Terraria.</p>
+         <div class="links">
+                <a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Source Code</a>
+             <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
+             </div>
+              <div class="technologies">
+                     <i class="devicon-csharp-plain"></i>
+                    <span class="iconify" data-icon="mdi:gamepad-variant-outline"></span>
+              </div>
                 </div>
                 <div class="card">
                     <img src="assets/MorseIcon.png" alt="Morse Code Translator Project Image">
@@ -63,9 +63,9 @@
                         <a href="https://nikosdeliv.github.io/Morse-Code-Translator/" target="_blank">Live Page</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-javascript-plain"></i>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/javascript/javascript-plain.svg" alt="JavaScript">
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/html5/html5-plain.svg" alt="HTML5">
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/css3/css3-plain.svg" alt="CSS3">
                     </div>
                 </div>
                 <div class="card">
@@ -77,9 +77,9 @@
                         <a href="https://nikosdeliv.github.io/Ultimate-Rock-Paper-Scissors/" target="_blank">Live Page</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-javascript-plain"></i>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/javascript/javascript-plain.svg" alt="JavaScript">
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/html5/html5-plain.svg" alt="HTML5">
+                        <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/css3/css3-plain.svg" alt="CSS3">
                     </div>
                 </div>
             </div>
@@ -96,30 +96,30 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-cplusplus-plain"></i></li>
-                    <li><i class="devicon-csharp-plain"></i></li>
-                    <li><i class="devicon-java-plain"></i></li>
-                    <li><i class="devicon-html5-plain"></i></li>
-                    <li><i class="devicon-css3-plain"></i></li>
-                    <li><i class="devicon-javascript-plain"></i></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/cplusplus/cplusplus-plain.svg" alt="C++"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/csharp/csharp-plain.svg" alt="C#"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/java/java-plain.svg" alt="Java"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/html5/html5-plain.svg" alt="HTML5"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/css3/css3-plain.svg" alt="CSS3"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/javascript/javascript-plain.svg" alt="JavaScript"></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-github-original"></i></li>
-                    <li><i class="devicon-git-plain"></i></li>
-                    <li><i class="devicon-dotnetcore-plain"></i></li>
-                    <li><i class="devicon-react-original"></i></li>
-                    <li><i class="devicon-godot-plain"></i></li>
-                    <li><i class="devicon-bootstrap-plain"></i></li>
+                    <li><img src="https://deviconapi.vercel.app/github?version=original-wordmark&size=180" alt="GitHub"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/git/git-plain.svg" alt="Git"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/dotnetcore/dotnetcore-plain.svg" alt=".NET Core"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/react/react-original.svg" alt="React"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/godot/godot-plain.svg" alt="Godot"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/bootstrap/bootstrap-plain.svg" alt="Bootstrap"></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-visualstudio-plain"></i></li>
-                    <li><i class="devicon-vscode-plain"></i></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/visualstudio/visualstudio-plain.svg" alt="Visual Studio"></li>
+                    <li><img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/vscode/vscode-plain.svg" alt="VSCode"></li>
                     <li><span class="iconify" data-icon="devicon:netbeans"></span></li>
                 </ul>
             </div>
