--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
              </div>
               <div class="technologies">
-                     <i class="devicon-csharp-plain"></i>
-                    <span class="iconify" data-icon="mdi:gamepad-variant-outline"></span>
+                  <img src="https://github.com/devicons/devicon/blob/ca28c779441053191ff11710fe24a9e6c23690d6/icons/csharp/csharp-plain.svg" alt="C#">
+                  <span class="iconify" data-icon="mdi:gamepad-variant-outline"></span>
               </div>
                 </div>
                 <div class="card">
