--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>NikosDelivos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon@2.15.1/devicon.min.css">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -25,7 +27,7 @@
     <div class="container">
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals...</p>
+            <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer. In addition to my academic and professional goals, I enjoy playing video games, working on personal projects and learning new technologies.</p>
         </section>
         <section id="projects" class="section">
             <h2>Projects</h2>
@@ -38,7 +40,7 @@
                         <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank">Source Code</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-csharp-plain"></i>
+                        <i <span class="iconify" data-icon="devicon:csharp"></span>></i>
                     </div>
                 </div>
                 <div class="card">
@@ -50,8 +52,8 @@
                         <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-csharp-plain"></i>
-                        <span class="iconify" data-icon="logos:terraria"></span>
+                        <i <span class="iconify" data-icon="devicon:csharp"></span>></i>
+                        <span class="iconify" data-icon="arcticons:terraria"></span>
                     </div>
                 </div>
                 <div class="card">
@@ -63,9 +65,9 @@
                         <a href="https://nikosdeliv.github.io/Morse-Code-Translator/" target="_blank">Live Page</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-javascript-plain"></i>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>
+                        <i <span class="iconify" data-icon="logos:javascript"></span>></i>
+                        <i <span class="iconify" data-icon="devicon:html5"></span>></i>
+                        <i <span class="iconify" data-icon="devicon:css3"></span>></i>
                     </div>
                 </div>
                 <div class="card">
@@ -77,9 +79,9 @@
                         <a href="https://nikosdeliv.github.io/Ultimate-Rock-Paper-Scissors/" target="_blank">Live Page</a>
                     </div>
                     <div class="technologies">
-                        <i class="devicon-javascript-plain"></i>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>
+                        <i <span class="iconify" data-icon="logos:javascript"></span>></i>
+                        <i <span class="iconify" data-icon="devicon:html5"></span>></i>
+                        <i <span class="iconify" data-icon="devicon:css3"></span>></i>
                     </div>
                 </div>
             </div>
@@ -96,30 +98,30 @@
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-cplusplus-plain"></i></li>
-                    <li><i class="devicon-csharp-plain"></i></li>
-                    <li><i class="devicon-java-plain"></i></li>
-                    <li><i class="devicon-html5-plain"></i></li>
-                    <li><i class="devicon-css3-plain"></i></li>
-                    <li><i class="devicon-javascript-plain"></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:cplusplus"></span></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:csharp"></span></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:java"></span></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:html5"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:css3"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="logos:javascript"></span>"></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>Frameworks & Platforms</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-github-original"></i></li>
-                    <li><i class="devicon-git-plain"></i></li>
-                    <li><i class="devicon-dotnetcore-plain"></i></li>
-                    <li><i class="devicon-react-original"></i></li>
-                    <li><i class="devicon-godot-plain"></i></li>
-                    <li><i class="devicon-bootstrap-plain"></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:github"></span>"></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:git"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:dotnetcore"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:react"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:godot"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:bootstrap"></span>></i></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>IDEs</h3>
                 <ul class="technologies-line">
-                    <li><i class="devicon-visualstudio-plain"></i></li>
-                    <li><i class="devicon-vscode-plain"></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:visualstudio"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="devicon:vscode"></span>></i></li>
                     <li><span class="iconify" data-icon="devicon:netbeans"></span></li>
                 </ul>
             </div>
