--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </section>
         <section id="technologies">
-            <h2>Technologies</h2>
+            <h2>Tools</h2>
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
