--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
             <a href="#certificates">Certificates</a>
+            <a href="pixelart.html" class="pixel-art-link">I do pixel art too!</a>
         </nav>
     </header>
     <div class="container">
@@ -94,7 +95,7 @@
             </div>
         </section>
         <section id="technologies">
-            <h2>Tools</h2>
+            <h2>Technologies</h2>
             <div class="category">
                 <h3>Languages</h3>
                 <ul class="technologies-line">
