--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <li><i <span class="iconify" data-icon="devicon:react"></span>></i></li>
                     <li><i <span class="iconify" data-icon="devicon:godot"></span>></i></li>
                     <li><i <span class="iconify" data-icon="devicon:bootstrap"></span>></i></li>
+                    <li><i <span class="iconify" data-icon="simple-icons:aseprite"></span>></i></li>
                 </ul>
             </div>
             <div class="category">
