--- a/pixelart.html
+++ b/pixelart.html
@@ -23,20 +23,20 @@
             <p>Sableye</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/El_Gato.png" alt="Pixel Art 2">
+            <img src="assets/PixelArt/El_Gato.png" alt="Pixel Art 3">
             <p>cat</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/EmRanNuz_Final.png" alt="Pixel Art 2">
+            <img src="assets/PixelArt/EmRanNuz_Final.png" alt="Pixel Art 4">
             <p>Emerald Randomized Nuzlocke</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission.png" alt="Pixel Art 2">
-            <p>Friends favorite Pokemon</p>
+            <img src="assets/PixelArt/Commission.png" alt="Pixel Art 5">
+            <p>Commission for friends favorite Pokemon</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission2.png" alt="Pixel Art 2">
-            <p>Another friends favorite pokemon</p>
+            <img src="assets/PixelArt/Commission2.png" alt="Pixel Art 6">
+            <p>Commission for friends favorite pokemon</p>
         </div>
     </div>
 </body>
