--- a/pixelart.html
+++ b/pixelart.html
@@ -36,7 +36,7 @@
         </div>
         <div class="art-piece">
             <img src="assets/PixelArt/Commission2.png" alt="Pixel Art 6">
-            <p>Commission for friends favorite pokemon</p>
+            <p>Commission for friends favorite Pokemon</p>
         </div>
     </div>
 </body>
