--- a/pixelart.html
+++ b/pixelart.html
@@ -15,29 +15,40 @@
     </header>
     <div class="gallery">
         <div class="art-piece">
-            <img src="assets//PixelArt/Bowtide_Spritesheet.png" alt="Pixel Art 1">
+            <img src="assets//PixelArt/Bowtide_Spritesheet.png" alt="Bowtide Sprites">
             <p>Bowtide Sprites</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Sableye.png" alt="Pixel Art 2">
+            <img src="assets/PixelArt/Sableye.png" alt="Sableye">
             <p>Sableye</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/El_Gato.png" alt="Pixel Art 3">
-            <p>cat</p>
+            <img src="assets/PixelArt/El_Gato.png" alt="Cat">
+            <p>Cat</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/EmRanNuz_Final.png" alt="Pixel Art 4">
+            <img src="assets/PixelArt/EmRanNuz_Final.png" alt="Emerald Randomized Nuzlocke">
             <p>Emerald Randomized Nuzlocke</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission.png" alt="Pixel Art 5">
-            <p>Commission for friends favorite Pokemon</p>
+            <img src="assets/PixelArt/Commission.png" alt="Commission with friend's Favorite Pokemon">
+            <p>Commission with Friend's Favorite Pokemon</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission2.png" alt="Pixel Art 6">
-            <p>Commission for friends favorite Pokemon</p>
+            <img src="assets/PixelArt/Commission2.png" alt="Another Commission with a Friend's Favorite Pokemon">
+            <p>Another Commission with a Friend's Favorite Pokemon</p>
+        </div>
+         <div class="art-piece">
+            <img src="assets/PixelArt/PlagueDoctor.png" alt="Plague Doctor">
+            <p>Plague Doctor / My pixel art version of art I found online</p>
         </div>
     </div>
+    <!-- Modal -->
+    <div class="modal" id="imageModal">
+        <span class="close" id="closeModal">&times;</span>
+        <img class="modal-content" id="modalImage" src="" alt="">
+        <div id="caption"></div>
+    </div>  
+    <script src="script.js"></script>  
 </body>
 </html>
