--- a/pixelart.html
+++ b/pixelart.html
@@ -31,12 +31,16 @@
             <p>Emerald Randomized Nuzlocke</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission.png" alt="Commission with friend's Favorite Pokemon">
-            <p>Commission with Friend's Favorite Pokemon</p>
+            <img src="assets/PixelArt/Commission.png" alt="Sprite art for Friend">
+            <p>Sprite art for Friend</p>
         </div>
         <div class="art-piece">
-            <img src="assets/PixelArt/Commission2.png" alt="Another Commission with a Friend's Favorite Pokemon">
-            <p>Another Commission with a Friend's Favorite Pokemon</p>
+            <img src="assets/PixelArt/Commission2.png" alt="Sprite art for Friend">
+            <p>Sprite art for Friend</p>
+        </div>
+        <div class="art-piece">
+            <img src="assets/PixelArt/Commission3.png" alt="Sprite art for Friend">
+            <p>Sprite art for Friend</p>
         </div>
          <div class="art-piece">
             <img src="assets/PixelArt/PlagueDoctor.png" alt="Plague Doctor">
