added new project
its peak

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                     </div>
                 </div>
                 <div class="card">
+                    <img src="assets/PGDIcon.png" alt="Procedurally Generated Dungeons Project Image">
+                    <h3>Procedurally Generated Dungeons</h3>
+                    <p>An app that makes Procedurally Generated Dungeons with sizes of your choosing</p>
+                    <div class="links">
+                        <a href="https://github.com/NikosDeliv/ProcedurallyGeneratedDungeon" target="_blank">Source Code</a>
+                    </div>
+                    <div class="technologies">
+                        <i <span class="iconify" data-icon="devicon:csharp"></span>></i>
+                    </div>
+                </div>
+                <div class="card">
                     <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
                     <h3>Bowtide</h3>
                     <p>A Terraria mod that introduces new archery items such as bows and accessories to enhance the ranged bow experience in Terraria.</p>
