--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <li><i <span class="iconify" data-icon="devicon:html5"></span>></i></li>
                     <li><i <span class="iconify" data-icon="devicon:css3"></span>></i></li>
                     <li><i <span class="iconify" data-icon="logos:javascript"></span>"></i></li>
+                    <li><i <span class="iconify" data-icon="logos:python"></span>"></i></li>
+
                 </ul>
             </div>
             <div class="category">
