--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
             <a href="#certificates">Certificates</a>
-            <a href="pixelart.html" class="pixel-art-link">I do pixel art too!</a>
+            <a href="pixelart.html" class="pixel-art-link">Pixel Art Archive</a>
         </nav>
     </header>
     <div class="container">
@@ -47,25 +47,12 @@
                 <div class="card">
                     <img src="assets/PGDIcon.png" alt="Procedurally Generated Dungeons Project Image">
                     <h3>Procedurally Generated Dungeons</h3>
-                    <p>An app that makes Procedurally Generated Dungeons with sizes of your choosing</p>
+                    <p>A tool to help you generate new dungeon layouts for your needs</p>
                     <div class="links">
                         <a href="https://github.com/NikosDeliv/ProcedurallyGeneratedDungeon" target="_blank">Source Code</a>
                     </div>
                     <div class="technologies">
                         <i <span class="iconify" data-icon="devicon:csharp"></span>></i>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="assets/BowtideIcon.png" alt="Bowtide Project Image">
-                    <h3>Bowtide</h3>
-                    <p>A Terraria mod that introduces new archery items such as bows and accessories to enhance the ranged bow experience in Terraria.</p>
-                    <div class="links">
-                        <a href="https://github.com/NikosDeliv/Bowtide" target="_blank">Source Code</a>
-                        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3351559462" target="_blank">Steam Workshop</a>
-                    </div>
-                    <div class="technologies">
-                        <i <span class="iconify" data-icon="devicon:csharp"></span>></i>
-                        <span class="iconify" data-icon="arcticons:terraria"></span>
                     </div>
                 </div>
                 <div class="card">
@@ -82,19 +69,8 @@
                         <i <span class="iconify" data-icon="devicon:css3"></span>></i>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/URPSIcon.png" alt="Ultimate Rock Paper Scissors Project Image">
-                    <h3>Ultimate Rock Paper Scissors</h3>
-                    <p>A fun game to kill time.</p>
-                    <div class="links">
-                        <a href="https://github.com/NikosDeliv/Ultimate-Rock-Paper-Scissors" target="_blank">Source Code</a>
-                        <a href="https://nikosdeliv.github.io/Ultimate-Rock-Paper-Scissors/" target="_blank">Live Page</a>
-                    </div>
-                    <div class="technologies">
-                        <i <span class="iconify" data-icon="logos:javascript"></span>></i>
-                        <i <span class="iconify" data-icon="devicon:html5"></span>></i>
-                        <i <span class="iconify" data-icon="devicon:css3"></span>></i>
-                    </div>
+                <div class="view-more">
+                    <a href="allprojects.html" class="button">And Many More</a>
                 </div>
             </div>
         </section>
@@ -117,7 +93,6 @@
                     <li><i <span class="iconify" data-icon="devicon:css3"></span>></i></li>
                     <li><i <span class="iconify" data-icon="logos:javascript"></span>"></i></li>
                     <li><i <span class="iconify" data-icon="logos:python"></span>"></i></li>
-
                 </ul>
             </div>
             <div class="category">
