--- a/allprojects.html
+++ b/allprojects.html
@@ -55,7 +55,7 @@
     
             <section class="project">
                 <h2>Ultimate Rock Paper Scissors</h2>
-                <p class="description">A work in progress terraria mod that adds various bows, arrows and accessories</p>
+                <p class="description">Rock Paper Scissors but with a twist</p>
                 <div class="links">
                     <a href="https://github.com/NikosDeliv/Ultimate-Rock-Paper-Scissors" target="_blank">Source Code</a>
                             <a href="https://nikosdeliv.github.io/Ultimate-Rock-Paper-Scissors/" target="_blank">Live Page</a>
