--- a/allprojects.html
+++ b/allprojects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Project Museum</h1>
+        <h1>Project Archive</h1>
         <p>Explore my collection of projects.</p>
         <a href="index.html" class="button"> Back to Main Page</a>
     </header>
