new pixel art stuff and link to download GlimmerDex

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <img src="assets/GlimmerDexIcon.png" alt="GlimmerDex Project Image">
                     <h3>GlimmerDex - Pokemon Encounter Counter</h3>
                     <p>A Shiny hunting companion app that helps players track their encounter counts while shiny hunting in Pokémon games.</p>
+                    <iframe frameborder="0" src="https://itch.io/embed/3530767" width="208" height="167"><a href="https://nico18n3.itch.io/glimmerdex">Pokemon Shiny Hunting Tracker - GlimmerDex by Nico18n3</a></iframe>
                     <div class="links">
                         <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank">Source Code</a>
                     </div>
@@ -104,14 +105,6 @@
                     <li><i <span class="iconify" data-icon="devicon:react"></span>></i></li>
                     <li><i <span class="iconify" data-icon="devicon:godot"></span>></i></li>
                     <li><i <span class="iconify" data-icon="devicon:bootstrap"></span>></i></li>
-                </ul>
-            </div>
-            <div class="category">
-                <h3>IDEs</h3>
-                <ul class="technologies-line">
-                    <li><i <span class="iconify" data-icon="devicon:visualstudio"></span>></i></li>
-                    <li><i <span class="iconify" data-icon="devicon:vscode"></span>></i></li>
-                    <li><span class="iconify" data-icon="devicon:netbeans"></span></li>
                 </ul>
             </div>
         </section>
