minor changes, pictures added

--- a/allprojects.html
+++ b/allprojects.html
@@ -152,9 +152,7 @@
                 
                 <!-- Project 6 -->
                 <div class="project-card" data-category="python">
-                    <div class="project-image">
-                        <img src="/api/placeholder/400/200" alt="Digital Frame">
-                    </div>
+                    
                     <div class="project-content">
                         <h3>Digital Frame</h3>
                         <p>A script that replicates a digital photo frame, displaying pictures and changing them every few seconds. Customizable transition effects.</p>
@@ -171,7 +169,7 @@
                 <!-- Project 7 -->
                 <div class="project-card" data-category=".net">
                     <div class="project-image">
-                        <img src="/api/placeholder/400/200" alt="Scoundrel">
+                        <img src="/assets/ScoundrelIcon.png" alt="Scoundrel">
                     </div>
                     <div class="project-content">
                         <h3>Scoundrel - Dungeon Crawler</h3>
@@ -190,7 +188,7 @@
                 <!-- Project 8 -->
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="/api/placeholder/400/200" alt="Personal Portfolio Website">
+                        <img src="/assets/PortfolioSite.png" alt="Personal Portfolio Website">
                     </div>
                     <div class="project-content">
                         <h3>Personal Portfolio Website</h3>
@@ -201,7 +199,7 @@
                             <span class="project-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/NikosDeliv/portfolio" target="_blank"><i class="fab fa-github"></i> Source Code</a>
+                            <a href="https://github.com/NikosDeliv/NikosDeliv.github.io" target="_blank"><i class="fab fa-github"></i> Source Code</a>
                         </div>
                     </div>
                 </div>
