--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Portfolio of Nikos Delivos - Computer Science Student & Developer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -61,7 +62,7 @@
                 </div>
                 <div class="about-text">
                     <h3>Computer Science Student & Developer</h3>
-                    <p>I'm a passionate Computer Science student at Democritus University of Thrace, currently in my 3rd year of studies. My primary focus is becoming a proficient .NET developer and Software Engineer.</p>
+                    <p>I'm a Computer Science student at Democritus University of Thrace, currently in my 3rd year of studies. My primary focus is becoming a proficient .NET developer and Software Engineer.</p>
                     <p>Beyond academics, I enjoy playing video games, creating pixel art, and continuously working on personal projects to expand my skillset. I'm enthusiastic about solving problems through code and developing intuitive software solutions.</p>
                     <p>My goal is to create applications that not only function efficiently but also provide a great user experience. I'm always eager to learn new technologies and programming paradigms to enhance my development capabilities.</p>
                     <a href="#contact" class="btn">Get In Touch</a>
@@ -81,11 +82,11 @@
                     <h3>Languages</h3>
                     <div class="skill-icons">
                         <div class="skill-icon">
-                            <i class="fab fa-cuttlefish"></i>
+                            <i class="devicon-cplusplus-plain"></i>
                             <span>C++</span>
                         </div>
                         <div class="skill-icon">
-                            <i class="fab fa-microsoft"></i>
+                            <i class="devicon-csharp-plain"></i>
                             <span>C#</span>
                         </div>
                         <div class="skill-icon">
@@ -109,57 +110,57 @@
                             <span>Python</span>
                         </div>
                     </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Frameworks & Platforms</h3>
-                    <div class="skill-icons">
-                        <div class="skill-icon">
-                            <i class="fab fa-github"></i>
-                            <span>GitHub</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fab fa-git-alt"></i>
-                            <span>Git</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fab fa-microsoft"></i>
-                            <span>.NET Core</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fab fa-react"></i>
-                            <span>React</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fas fa-gamepad"></i>
-                            <span>Godot</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fab fa-bootstrap"></i>
-                            <span>Bootstrap</span>
+                    </div>
+                    <div class="skill-category">
+                        <h3>Frameworks & Platforms</h3>
+                        <div class="skill-icons">
+                            <div class="skill-icon">
+                                <i class="fab fa-github"></i>
+                                <span>GitHub</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="fab fa-git-alt"></i>
+                                <span>Git</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="devicon-dotnetcore-plain"></i>
+                                <span>.NET Core</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="fab fa-react"></i>
+                                <span>React</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="fas fa-gamepad"></i>
+                                <span>Godot</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="fab fa-bootstrap"></i>
+                                <span>Bootstrap</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Tools & Other</h3>
-                    <div class="skill-icons">
-                        <div class="skill-icon">
-                            <i class="fas fa-database"></i>
-                            <span>SQL</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fas fa-paint-brush"></i>
-                            <span>Aseprite</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fas fa-code"></i>
-                            <span>VS Code</span>
-                        </div>
-                        <div class="skill-icon">
-                            <i class="fas fa-window-restore"></i>
-                            <span>Visual Studio</span>
+                    <div class="skill-category">
+                        <h3>Tools & Other</h3>
+                        <div class="skill-icons">
+                            <div class="skill-icon">
+                                <i class="fas fa-database"></i>
+                                <span>SQL</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="fas fa-paint-brush"></i>
+                                <span>Aseprite</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="devicon-vscode-plain"></i>
+                                <span>VS Code</span>
+                            </div>
+                            <div class="skill-icon">
+                                <i class="devicon-visualstudio-plain"></i>
+                                <span>Visual Studio</span>
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
