can now go to the workshop page of Bowtide

--- a/allprojects.html
+++ b/allprojects.html
@@ -145,7 +145,7 @@
                             <span class="project-tag">Game Mod</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="disabled"><i class="fas fa-code-branch"></i> Work in Progress</a>
+                            <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3516601017" target="_blank"><i class="fas fa-gamepad"></i>Steam Workshop</a>
                         </div>
                     </div>
                 </div>
