changed a few icons and fixed some errors

--- a/allprojects.html
+++ b/allprojects.html
@@ -202,6 +202,20 @@
                     </div>
                 </div>
 
+                <div class="project-card" data-category="web">
+
+                    <div class="project-content">
+                        <h3> Digital Garden (WIP)</h3>
+                        <p>More personal website for stuff thats on my mind, hobbies and maybe write about my projects. </p>
+                        <div class="project-tags">
+                            #adding soon
+                        </div>
+                        <div class="project-links">
+                            #adding soon
+                        </div>
+                    </div>
+                </div>
+
                
             </div>
         </div>
