--- a/index.html
+++ b/index.html
@@ -151,14 +151,6 @@
                                 <i class="fas fa-paint-brush"></i>
                                 <span>Aseprite</span>
                             </div>
-                            <div class="skill-icon">
-                                <i class="devicon-vscode-plain"></i>
-                                <span>VS Code</span>
-                            </div>
-                            <div class="skill-icon">
-                                <i class="devicon-visualstudio-plain"></i>
-                                <span>Visual Studio</span>
-                            </div>
                         </div>
                     </div>
             </div>
@@ -186,7 +178,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/NikosDeliv/GlimmerDex" target="_blank"><i class="fab fa-github"></i> Source Code</a>
-                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fas fa-gamepad"></i> Live Demo</a>
+                            <a href="https://nico18n3.itch.io/glimmerdex" target="_blank"><i class="fas fa-gamepad"></i> Download </a>
                         </div>
                     </div>
                 </div>
