--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="hero-content box">
                 <h1>Nikos Delivos</h1>
                 <h2>Computer Science Student & Developer</h2>
-                <p>I'm a 3rd year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer.</p>
+                <p>I'm a 4th year Computer Science student at Democritus University of Thrace with aspirations to become a .NET developer/Software Engineer.</p>
                 <div>
                     <a href="#projects" class="btn">View My Projects</a>
                     <a href="#contact" class="btn btn-secondary">Contact Me</a>
@@ -337,4 +337,5 @@
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
+
 </html>
