--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="about-text flex-item-unequal box">
                     <h3>Computer Science Student & Developer</h3>
-                    <p>I'm a Computer Science student at Democritus University of Thrace, currently in my 3rd year of studies. My primary focus is becoming a proficient .NET developer and Software Engineer.</p>
+                    <p>I'm a Computer Science student at Democritus University of Thrace, currently in my 4th year of studies. My primary focus is becoming a proficient .NET developer and Software Engineer.</p>
                     <p>Beyond academics, I enjoy playing video games, creating pixel art, and continuously working on personal projects to expand my skillset. I'm enthusiastic about solving problems through code and developing intuitive software solutions.</p>
                     <p>My goal is to create applications that not only function efficiently but also provide a great user experience. I'm always eager to learn new technologies and programming paradigms to enhance my development capabilities.</p>
                     <a href="#contact" class="btn">Get In Touch</a>
@@ -339,3 +339,4 @@
 </body>
 
 </html>
+
