--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <span>React</span>
                         </div>
                         <div class="skill-icon">
-                            <i class="fas fa-gamepad"></i>
+                            <i class="devicon-godot-plain"></i>
                             <span>Godot</span>
                         </div>
                         <div class="skill-icon">
@@ -325,5 +325,6 @@
 </body>
 
 </html>
+
 
 
